--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http-proxy": "^1.18.1"
   },
   "name": "searchapp",
   "description": "Search App",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
